Made images viewable

--- a/contactUs.html
+++ b/contactUs.html
@@ -140,7 +140,7 @@
 <header class="main-header">
   <div class="container">
     <h1 class="mh-logo">
-      <img class = "image1" src="file:///Users/Kazzy/Desktop/MOM's%20WEBSITE/Pictures%20for%20the%20Website/chiyo%20shidara%20logo.png" width="170" height="95" alt="Office logo" style="position: relative; top: -1vH;">
+      <img class = "image1" src="./Pictures%20for%20the%20Website/chiyo%20shidara%20logo.png" width="170" height="95" alt="Office logo" style="position: relative; top: -1vH;">
     </h1>
     <nav class="main-nav">
       <ul class="main-nav-list">
@@ -212,7 +212,7 @@
 <body>
 
 <div class="container" style="position: relative; top: -6vH;">
-  <img src="file:///Users/Kazzy/Desktop/MOM's%20WEBSITE/Pictures%20for%20the%20Website/IMG_4579.jpg"   alt="Front of Office Picture" style="width:100%; max-height: 90vH;-webkit-filter: blur(3px); filter: blur(3px);">
+  <img src="./Pictures%20for%20the%20Website/IMG_4579.jpg"   alt="Front of Office Picture" style="width:100%; max-height: 90vH;-webkit-filter: blur(3px); filter: blur(3px);">
   <div style= "position:absolute; width:100%; top:0%; height:100%; background-color:black; opacity:0.3;"></div>
   <div class="text-block">
     <br>
