--- a/forPatientsPAYMENT.html
+++ b/forPatientsPAYMENT.html
@@ -140,7 +140,7 @@
 <header class="main-header">
   <div class="container">
     <h1 class="mh-logo">
-      <img class = "image1" src="file:///Users/Kazzy/Desktop/MOM's%20WEBSITE/Pictures%20for%20the%20Website/chiyo%20shidara%20logo.png" width="170" height="95" alt="Office logo" style="position: relative; top: -1vH;">
+      <img class = "image1" src="./Pictures%20for%20the%20Website/chiyo%20shidara%20logo.png" width="170" height="95" alt="Office logo" style="position: relative; top: -1vH;">
     </h1>
     <nav class="main-nav">
       <ul class="main-nav-list">
@@ -221,7 +221,7 @@
   <div style="font-size: 3.7vH;">General Information 
     <br>
     <br>
-    <img src="file:///Users/Kazzy/Desktop/MOM's%20WEBSITE/Pictures%20for%20the%20Website/045b0cad-6bab-4e70-b216-a3ad68da453c_200x200.png" class="image">
+    <img src="./Pictures%20for%20the%20Website/045b0cad-6bab-4e70-b216-a3ad68da453c_200x200.png" class="image">
     <p style=" font-size: 2.5vH; color: #4787B0;"> To make an appointment, please call us at:</p>
     <a href="tel:1-510-741-7100" style="font-size: 3vH; color: black">(510)741-7100</a>
     <p style=" font-size: 2.5vH; color: #4787B0;"> Please arrive 5 minutes prior to your scheduled appointment</p>
@@ -231,7 +231,7 @@
   <div style="font-size: 3.7vH;"> Accepted Insurance
     <br>
     <br>
-    <img src="file:///Users/Kazzy/Desktop/MOM's%20WEBSITE/Pictures%20for%20the%20Website/22b7fb0d-21ef-423a-a414-de656c7ca8ba_200x200.png" class="image">
+    <img src="./Pictures%20for%20the%20Website/22b7fb0d-21ef-423a-a414-de656c7ca8ba_200x200.png" class="image">
     <p style="font-size: 2.5vH; color: #4787B0;"> We accept various dental insurances, including, but not limited to:</p>
     <ul style="font-size: 2.5vH; text-align: left;">
       <li>All PPO plans</li>
@@ -248,7 +248,7 @@
   <div style="font-size: 3.7vH;">Payment Options
     <br>
     <br>
-    <img src="file:///Users/Kazzy/Desktop/MOM's%20WEBSITE/Pictures%20for%20the%20Website/a6df7eb2-1159-4207-8f4b-8dc2770a663d_200x200.png" class="image">
+    <img src="./Pictures%20for%20the%20Website/a6df7eb2-1159-4207-8f4b-8dc2770a663d_200x200.png" class="image">
     <p style= "font-size: 2.5vH; color: #4787B0;">The following forms of payments are accepted in our office: </p>
     <ul style="font-size: 2.5vH; text-align: left;">
       <li>Cash</li>
