--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 <header class="main-header">
   <div class="container">
     <h1 class="mh-logo">
-      <img class = "image1" src="file:///Users/Kazzy/Desktop/MOM's%20WEBSITE/Pictures%20for%20the%20Website/chiyo%20shidara%20logo.png" width="170" height="95" alt="Office logo" style="position: relative; top: -1vH;">
+      <img class = "image1" src="./Pictures%20for%20the%20Website/chiyo%20shidara%20logo.png" width="170" height="95" alt="Office logo" style="position: relative; top: -1vH;">
     </h1>
     <nav class="main-nav">
       <ul class="main-nav-list">
@@ -248,7 +248,7 @@ body {
 
 
 <div class="container2">
-  <img src="file:///Users/Kazzy/Desktop/MOM's%20WEBSITE/Pictures%20for%20the%20Website/IMG_1898%20(1).jpg" alt="Home page pic of teens smiling" alt="Notebook" style="width:100%">
+  <img src="./Pictures%20for%20the%20Website/IMG_1898%20(1).jpg" alt="Home page pic of teens smiling" alt="Notebook" style="width:100%">
     <div class="content" class="center">
       <p style="text-align: center; font-family: Helvetica; font-size: 6.8vH;">Exceptional service and care for a smile <br> you can count on</p>
     </div>
