--- a/forPatientsNEW.html
+++ b/forPatientsNEW.html
@@ -140,7 +140,7 @@
 <header class="main-header">
   <div class="container">
     <h1 class="mh-logo">
-      <img class = "image1" src="file:///Users/Kazzy/Desktop/MOM's%20WEBSITE/Pictures%20for%20the%20Website/chiyo%20shidara%20logo.png" width="170" height="95" alt="Office logo" style="position: relative; top: -1vH;">
+      <img class = "image1" src="./Pictures%20for%20the%20Website/chiyo%20shidara%20logo.png" width="170" height="95" alt="Office logo" style="position: relative; top: -1vH;">
     </h1>
     <nav class="main-nav">
       <ul class="main-nav-list">
@@ -251,7 +251,7 @@
 </style>
 
 <div class="container2">
-    <img src="file:///Users/Kazzy/Desktop/MOM's%20WEBSITE/Pictures%20for%20the%20Website/IMG_4580.jpg" style="width: 100%; height: 70vH; -webkit-filter: blur(2px);filter: blur(2px);" class = "image">
+    <img src="./Pictures%20for%20the%20Website/IMG_4580.jpg" style="width: 100%; height: 70vH; -webkit-filter: blur(2px);filter: blur(2px);" class = "image">
     <div style= "position: absolute; width:100%; height:100%; background-color:black; opacity:0.35; top: 0;"></div>
    
     <div class = "centeredTop"> We strive to meet our patients' needs with the highest standard of dental care. Our mission is to not only provide quality care but to also listen, examine, and resolve any medical problem on an individual level. We are thrilled to welcome you to our dental family and look forward to working with you.  </div>
@@ -299,7 +299,7 @@
 <p style="font-size: 3.5vH; text-align: center;"> Click on the icon below to access the forms: </p>
 <a href="file:///Users/Kazzy/Downloads/new%20pt%20forms.pdf" download> 
   <div class="container3">
-  <img src="file:///Users/Kazzy/Desktop/MOM's%20WEBSITE/Pictures%20for%20the%20Website/a758f134-201e-4b37-a6c8-f8a7f89694a0_200x200.jpeg" alt="Forms Icon" class="image2" style="height: 15vH; width: 15vH; display: block;margin-right: auto; margin-left: auto;">
+  <img src="./Pictures%20for%20the%20Website/a758f134-201e-4b37-a6c8-f8a7f89694a0_200x200.jpeg" alt="Forms Icon" class="image2" style="height: 15vH; width: 15vH; display: block;margin-right: auto; margin-left: auto;">
   </div>
 </a>
 
