--- a/servicesGENERAL.html
+++ b/servicesGENERAL.html
@@ -140,7 +140,7 @@
 <header class="main-header">
   <div class="container1">
     <h1 class="mh-logo">
-      <img class = "image1" src="file:///Users/Kazzy/Desktop/MOM's%20WEBSITE/Pictures%20for%20the%20Website/chiyo%20shidara%20logo.png" width="170" height="95" alt="Office logo" style="position: relative; top: -1vH;">
+      <img class = "image1" src="./Pictures%20for%20the%20Website/chiyo%20shidara%20logo.png" width="170" height="95" alt="Office logo" style="position: relative; top: -1vH;">
     </h1>
     <nav class="main-nav">
       <ul class="main-nav-list">
@@ -247,7 +247,7 @@
 
 <body>
 <div class="container2">
-    <img src="file:///Users/Kazzy/Desktop/MOM's%20WEBSITE/Pictures%20for%20the%20Website/IMG_2002.jpg" style="width: 100%; height: 60vH;" class = "image">
+    <img src="./Pictures%20for%20the%20Website/IMG_2002.jpg" style="width: 100%; height: 60vH;" class = "image">
     <div style= "position:absolute; top:0; width:100%; height:100%; background-color:black; opacity:0.40;"></div>
  
     <div class = "centeredTop"> General Dentistry </div>
