Fixed logo on Review page

--- a/aboutUsReviews.html
+++ b/aboutUsReviews.html
@@ -140,7 +140,7 @@
 <header class="main-header">
   <div class="container">
     <h1 class="mh-logo">
-      <img class = "image1" src="file:///Users/Kazzy/Desktop/MOM's%20WEBSITE/Pictures%20for%20the%20Website/chiyo%20shidara%20logo.png" width="170" height="95" alt="Office logo" style="position: relative; top: -1vH;">
+      <img class = "image1" src="./Pictures%20for%20the%20Website/chiyo%20shidara%20logo.png" width="170" height="95" alt="Office logo" style="position: relative; top: -1vH;">
     </h1>
     <nav class="main-nav">
       <ul class="main-nav-list">
